# FITDetectorToolkit

./: .bandit  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py
fitdetectortoolkit/: __init__.py  main.py
fitdetectortoolkit/config/: __init__.py  modules.json
scripts/: setup-dev.sh
tests/: __init__.py  test_main.py
