[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitdetectortoolkit"
version = "0.1.0"
description = "A toolkit for detector analysis with modular components"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mateusz Polis", email = "mateusz.polis@cern.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "gitpython",
    "packaging",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/mateuszpolis/FITDetectorToolkit"
Repository = "https://github.com/mateuszpolis/FITDetectorToolkit"
Issues = "https://github.com/mateuszpolis/FITDetectorToolkit/issues"

[project.scripts]
fitdetectortoolkit = "fitdetectortoolkit.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fitdetectortoolkit*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 